@@ -12,6 +12,7 @@ Performance:
 * Close pull request 488 - Speed up field construction & comparison (bpot)
 
 Bugs:
+* Shouldn't be fooled into encoding strings on 1.8 by unrelated Encoding constant (emiellohr, jeremy)
 * Header encoding should be US-ASCII, not the default external encoding (jeremy)
 * Address elements should return decoded display names by default (jeremy)
 * Fix up tests that depend on utf-8 external encoding; read fixtures as binary (jeremy)
